--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@
 
 .container{
     width: 100%;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 /************************** MAIN *************************/
 
 .main{
     flex-direction: column;
-    width: 100%;
+    width:100%;
     background-color: #2A4150;
 }
 
@@ -56,6 +56,66 @@ li{
 }
 
 .central-panel{
-    width: 100%;
-    
+    width:100%;
+    background-color:#5B7D86 ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.generator{
+    width: 600px;
+    height: 600px ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-generator{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+    background-color: white;
+}
+
+.main-generator{
+    width: 100%;
+    height: 70%;
+    background-color: black;
+}
+
+.footer-generator{
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+    background-color: white;
+}
+
+.title-top{
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.title-bottom{
+    font-size: 40px;
+    font-weight: 800;
+}
+
+aside{
+    width:25% ;
+    background-color:#2A4150 ;
+}
+
+.download{
+    margin-top: 15px;
+    background-color: rgb(43, 156, 43);
+    padding:14px ;
+    color: white;
+    font-size: 18px;
+}
+
+
+
