--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+body.modoClaro{
+    --colorFondoPrimario: #e0e0e0;
+    --colorFondoSecundario: #FAFAFA;
+    --colorFondoTerciario:#f1f1f1 ;
+    --colorTexto: black;
+}
+
+body.modoOscuro{
+    --colorFondoPrimario: #2E323C;
+    --colorFondoSecundario: #2A4150;
+    --colorFondoTerciario: #5B7D86;
+    --colorTexto: white;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 
 /*FUENTES PARA PANEL DE TEXTO*/
@@ -44,13 +58,13 @@ button{
 .title-container{
     justify-content: center;
     align-items: center;
-    background-color: #2E323C;
+    background-color: var(--colorFondoPrimario);
     width: 100%;
     padding: 12px;
 }
 
 .title{
-    color: white;
+    color: var(--colorTexto);
     font-size: 36px;
     font-weight: 500;
 }
@@ -63,7 +77,7 @@ button{
 ul{
     justify-content: center;
     align-items: center;
-    background-color: #2E323C;
+    background-color: var(--colorFondoPrimario);
     padding: 8px;
     list-style: none;
 }
@@ -74,15 +88,15 @@ li{
 }
 
 .btn-nav{
-    background-color: #2E323C;
+    background-color: var(--colorFondoPrimario);
     border: none;
-    color: white;
+    color: var(--colorTexto);
     font-size: 14px;
 }
 
 .central-panel{
     width:100%;
-    background-color:#5B7D86;
+    background-color: var(--colorFondoTerciario);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -144,7 +158,7 @@ li{
 
 aside{
     width:22%;
-    background-color:#2A4150 ;
+    background-color: var(--colorFondoSecundario);
     flex-direction: column;
     padding: 10px;
     color: white;
@@ -171,62 +185,74 @@ aside{
 
 h2{
     padding-top: 25px;
+    color: var(--colorTexto);
 }
 
 h3{
     margin-bottom: 8px;
     margin-top: 20px;
     font-size: 12px;
+    color: var(--colorTexto);
 }
 
 input{
     background-color: #5B7D86;
     height: 25px;
     border-radius: 5px;
+    border: none;
 }
 
 label{
     font-size: 12px;
     margin-top: 10px;
+    color: var(--colorTexto);
 }
-/*
-.fondo-img{
-    flex-direction: column;
-}
-*/
+
 .color-list{
     justify-content: space-between;
 }
 
 .color{
-    background-color:#5B7D86 ;
+    background-color: var(--colorFondoTerciario);
     align-items: center;
     width: 45%;
-    border-radius: 5px;
+    border-radius: 3px;
 }
-
 
 input[type='color']::-webkit-color-swatch{
   border-radius: 50%;
   cursor: pointer;
+  border: none;
+}
+
+input[type="color" i]{
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+    background-color: var(--colorFondoTerciario);
+    border: none;
 }
 
 .color-text{
     font-size: 14px;
-    padding-right: 5px;
+    padding-right: 10px;
+    color: var(--colorTexto);
 }
 
 #fondo{
     width: 45%;
-    background-color:#5B7D86 ;
+    background-color: var(--colorFondoTerciario);
     border-radius: 5px;
+    font-size: 14px;
+}
+
+select{
+    border: none;
 }
 
 .filtros-img{
     flex-direction: column;
 }
-
-
 
 .filtros{
     flex-direction: column;
@@ -243,40 +269,30 @@ input[type='color']::-webkit-color-swatch{
 }
 
 input[type='range'] {
-    background-color:#5B7D86;
+    background-color: var(--colorFondoTerciario);
     appearance: none;
     height: 6px;
     margin-top: 12px;
+    border: none;
 }
 
 
 /*******PANEL TEXTO*******/
-/*
-.text-panel{
-    flex-direction: column;
-}*/
-/*
-.superior-text{
-    flex-direction: column;
-}
-*/
+
 .sin-texto-superior{
     align-items: center;
 }
-/*
-.inferior-text{
-    flex-direction: column;
-}
-*/
+
 .sin-texto-inferior{
     align-items: center;
 }
 
 .control-text{
     height: 36px;
-    background-color: #5B7D86;
+    background-color: var(--colorFondoTerciario);
     border-radius: 3px;
-    color: white;
+    color: var(--colorTexto);
+    border: none;
 }
 
 .column{
@@ -301,7 +317,7 @@ input[type='range'] {
 }
 
 .color-input-texto{
-    background-color:#5B7D86 ;
+    background-color: var(--colorFondoTerciario);
     align-items: center;
     width: 100%;
     border-radius: 3px;
@@ -334,6 +350,8 @@ input[type='checkbox']{
     padding-left: 10px;
     padding-right: 10px;
 }
+
+
 
 
 
