--- a/css/style.css
+++ b/css/style.css
@@ -61,16 +61,14 @@ button{
 }
 
 .title-container{
+    display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--colorFondoPrimario);
     width: 100%;
     padding: 12px;
-}
-
-.title{
     color: var(--colorTexto);
-    font-size: 36px;
+    font-size: 18px;
     font-weight: 500;
 }
 
@@ -109,6 +107,7 @@ li{
 }
 
 .generator{
+    display: flex;
     width: 600px;
     height: 600px ;
     flex-direction: column;
@@ -117,13 +116,7 @@ li{
     background-color: black;
 }
 
-.header-generator{
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20%;
-    background-color: white;
-}
+
 
 .main-generator{
     width: 100%;
@@ -131,25 +124,17 @@ li{
     background-color: black;
 }
 
-.footer-generator{
-    justify-content: center;
-    align-items: center;
+p{
+    font-size: 40px;
+    font-weight: 800;
+    color: black;
     width: 100%;
-    height: 20%;
     background-color: white;
+    padding: 10px 0px;
+    text-align: center;
 }
 
-.title-top{
-    font-size: 40px;
-    font-weight: 800;
-    color: black;
-}
 
-.title-bottom{
-    font-size: 40px;
-    font-weight: 800;
-    color: black;
-}
 
 .btn-download{
     margin-top: 15px;
@@ -234,8 +219,8 @@ input[type='color']::-webkit-color-swatch{
 }
 
 input[type="color" i]{
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     margin-left: 5px;
     background-color: var(--colorFondoTerciario);
     border: none;
@@ -258,7 +243,7 @@ select{
     border: none;
 }
 
-.filtros-img{
+.filtros-img /*input*/{
     flex-direction: column;
 }
 
@@ -365,6 +350,9 @@ input[type='checkbox']{
     width: 100%;
 }
 
+.interlineado{
+    width: 100%;
+}
 
 
 
