--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,18 @@ body{
     display: flex;
 }
 
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
 #container{
     width: 100%;
+    display: flex;
     flex-direction: row;
 }
 
-.ocultar-panel{
+.ocultar{
     display: none;
 }
 
@@ -55,12 +61,11 @@ button{
 /************** MAIN ****************/
 
 .main{
-    flex-direction: column;
     width:100%;
     background-color: #2E323C;
 }
 
-.title-container{
+h1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,26 +73,17 @@ button{
     width: 100%;
     padding: 12px;
     color: var(--colorTexto);
-    font-size: 18px;
+    font-size: 36px;
     font-weight: 500;
 }
 
-.nav{
+nav{
+    display: flex;
     flex-direction: row;
     width: 100%;
-}
-
-ul{
     justify-content: center;
     align-items: center;
     background-color: var(--colorFondoPrimario);
-    padding: 8px;
-    list-style: none;
-}
-
-li{
-    padding: 10px;
-    color: white;
 }
 
 .btn-nav{
@@ -95,6 +91,11 @@ li{
     border: none;
     color: var(--colorTexto);
     font-size: 14px;
+    padding: 20px;
+}
+
+.texto-modo{
+    padding-left: 5px;
 }
 
 .central-panel{
@@ -116,8 +117,6 @@ li{
     background-color: black;
 }
 
-
-
 .main-generator{
     width: 100%;
     height: 100%;
@@ -130,14 +129,13 @@ p{
     color: black;
     width: 100%;
     background-color: white;
-    padding: 10px 0px;
+    padding: 20px 0px;
     text-align: center;
 }
 
-
-
 .btn-download{
     margin-top: 15px;
+    margin-bottom: 15px;
     background-color: rgb(43, 156, 43);
     padding:14px ;
     color: white;
@@ -165,18 +163,12 @@ aside{
     display: none;
 }
 
-/************PANEL IMAGEN************/
-
-.title-img{
-    justify-content: center;
-    align-items: center; 
-}
-
-.url-img{
-    flex-direction: column;
-}
+/************PANEL IMAGEN***********/
 
 h2{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     padding-top: 25px;
     color: var(--colorTexto);
 }
@@ -202,10 +194,12 @@ label{
 }
 
 .color-list{
+    display: flex;
     justify-content: space-between;
 }
 
 .color{
+    display: flex;
     background-color: var(--colorFondoTerciario);
     align-items: center;
     width: 45%;
@@ -226,7 +220,7 @@ input[type="color" i]{
     border: none;
 }
 
-.color-text{
+#color-text{
     font-size: 14px;
     padding-right: 10px;
     color: var(--colorTexto);
@@ -243,15 +237,10 @@ select{
     border: none;
 }
 
-.filtros-img /*input*/{
-    flex-direction: column;
-}
+/*.filtros-img input{
+}*/
 
-.filtros{
-    flex-direction: column;
-}
-
-.reestablecer{
+#btn-reestablecer{
     width: 70%;
     background-color: var(--colorFondoTerciario);
     font-size: 14px;
@@ -288,10 +277,6 @@ input[type='range'] {
     color: var(--colorTexto);
     border: none;
     padding: 5px 10px;
-}
-
-.column{
-    flex-direction: column;
 }
 
 .font-size{
@@ -357,11 +342,7 @@ input[type='checkbox']{
 
 
 
-/*Cambio de colores en ccs
-.claro.main, .claro aside, .claro.algo, .claro.control-text{
-background-color:
-color:
-}*/
+
 
 
 
