--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ p{
     color: black;
     width: 100%;
     background-color: white;
-    padding: 20px 0px;
+    padding: 20px 10px;
     text-align: center;
 }
 
@@ -142,7 +142,6 @@ p{
 
 /*************ASIDE*************/
 
-
 aside{
     width:22%;
     background-color: var(--colorFondoSecundario);
@@ -154,7 +153,7 @@ aside{
 #btn-salir{
     background-color: #2A4150;
     width: 15%;
-    color: white;
+    color: rgb(255, 255, 255);
     border: none;
     display: none;
 }
@@ -291,7 +290,7 @@ input[type='range'] {
     justify-content: space-between;
 }
 
-#boton-size{
+.boton-size{
     width: 30%;
 }
 
@@ -333,7 +332,7 @@ input[type='checkbox']{
     justify-content: space-between;
 }
 
-#botones-contorno{
+.botones-contorno{
     font-size: 14px;
     padding-left: 14px;
     padding-right: 14px;
