--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
 
 #container{
     width: 100%;
-    height: 730px;
+    height: 780px;
     display: flex;
     flex-direction: row;
 }
@@ -111,13 +111,15 @@ nav{
     background-color: var(--colorFondoTerciario);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
+
 
 .generator{
     display: flex;
-    width: 50%;
+    width: 60%;
     height: 100% ;
     flex-direction: column;
     justify-content: center;
@@ -133,7 +135,7 @@ nav{
 }
 
 p{
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 800;
     color: black;
     width: 100%;
@@ -172,10 +174,12 @@ aside{
 
 #btn-salir{
     background-color: #2A4150;
-    width: 15%;
+    width: 100%;
     color: rgb(255, 255, 255);
     border: none;
-    display: none;
+    visibility: hidden;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /***************PANEL IMAGEN*************/
@@ -247,7 +251,13 @@ input[type="color" i]:hover{
     background-color: var(--colorInputHover);
 }
 
+
+
 select{
+    border: none;
+}
+
+select:active{
     border: none;
 }
 
@@ -289,6 +299,15 @@ input[type='range'] {
     height: 6px;
     margin-top: 12px;
     border: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 14px;
+    width: 14px;
+    border-radius: 25px;
+    background: #FFFFFF;
+    cursor: pointer;
 }
 
 
@@ -394,35 +413,34 @@ input[type='checkbox']{
 
 /**************BREAKPOINT min 320 max 700****************/
 
-@media (min-width: 701px) and (max-width: 970px){
-    aside{
-        display: none;
-    }
-
-    .generator{
-        width: 75%;
-    }
-}
-
-@media (min-width: 541px) and (max-width: 700px){
+@media (min-width: 545px) and (max-width: 970px){
     aside{
         display: none;
     }
 
     .generator{
         width: 80%;
-    }   
+        height: 75%;
+    }
+
+    .central-panel{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
 }
 
-@media (min-width: 320px) and (max-width: 540px){
+@media (max-width: 545px){
     aside{
         display: none;
     }
 
     .generator{
-        width: 85%;
-    }   
+        width: 100%;
+        height: 70%;
+    }  
+  
 }
+
 
 
 
