--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body.modoClaro{
 }
 
 body{
-    background-color: var(--colorFondoPrimario);
+    background-color: var(--colorFondoTerciario);
     color: var(--colorTexto);
 }
 
@@ -45,7 +45,7 @@ body{
 
 #container{
     width: 100%;
-    height: 780px;
+    height: fit-content;
     display: flex;
     flex-direction: row;
 }
@@ -63,13 +63,17 @@ button{
 
 .main{
     width:100%;
+    
     background-color: #2E323C;
+    z-index: 1;
+    position: relative;
 }
 
 h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align:center;
     background-color: var(--colorFondoPrimario);
     width: 100%;
     padding: 12px;
@@ -112,15 +116,15 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
 }
 
 
 .generator{
     display: flex;
-    width: 60%;
-    height: 100% ;
+    width: 40%;
+    height: 85vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -131,17 +135,17 @@ nav{
     width: 100%;
     height: 100%;
     background-color: black;
-    background-size: cover;
+    background-size:cover
 }
 
 p{
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 800;
     color: black;
     width: 100%;
     background-color: white;
-    padding: 20px 10px;
     text-align: center;
+    padding: 10px;
 }
 
 .btn-download{
@@ -162,17 +166,50 @@ p{
 
 /*****************ASIDE*****************/
 
-aside{
+/* aside{
+    height: 100%;
+} */
+
+#img-panel{
     display: flex;
-    width:22%;
+    width:280px;
+    height: 800px;
     background-color: var(--colorFondoSecundario);
     flex-direction: column;
     padding: 10px;
     padding-bottom: 20px;
     color: white;
+    z-index: 3;
+    position: absolute;
+    right: 0;
 }
 
-#btn-salir{
+
+#texto-panel{
+    display: flex;
+    width:280px;
+    height: 800px;
+    background-color: var(--colorFondoSecundario);
+    flex-direction: column;
+    padding: 10px;
+    padding-bottom: 20px;
+    color: white;
+    z-index: 2;
+    position: absolute;
+    right: 0;
+}
+
+#btn-salir-img{
+    background-color: #2A4150;
+    width: 100%;
+    color: rgb(255, 255, 255);
+    border: none;
+    visibility: hidden;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#btn-salir-texto{
     background-color: #2A4150;
     width: 100%;
     color: rgb(255, 255, 255);
@@ -338,6 +375,8 @@ input[type=range]::-webkit-slider-thumb {
 
 .font-size{
     width: 48%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .tamanio-fuente{
@@ -410,34 +449,68 @@ input[type='checkbox']{
     width: 100%;
 }
 
+/**************BREAKPOINT****************/
 
-/**************BREAKPOINT min 320 max 700****************/
+@media (min-width: 645px) and (max-width: 1020px){
+    #img-panel{
+        z-index: 0;
+        visibility: hidden;
+    }    
 
-@media (min-width: 545px) and (max-width: 970px){
-    aside{
-        display: none;
+    #texto-panel{
+        z-index: 0;
+        visibility: hidden;
+    }
+
+    #btn-salir-texto{
+        visibility: visible;
+    }
+
+    #btn-salir-img{
+        visibility: visible;
     }
 
     .generator{
-        width: 80%;
-        height: 75%;
-    }
-
-    .central-panel{
-        padding-left: 30px;
-        padding-right: 30px;
-    }
+        width: 65%;
+    }  
 }
 
-@media (max-width: 545px){
-    aside{
-        display: none;
+@media (min-width: 280px) and (max-width: 645px){
+    #img-panel{
+        width: 100%;
+        z-index: 0;
+        visibility: hidden;
+    }    
+
+    #texto-panel{
+        width: 100%;
+        z-index: 0;
+        visibility: hidden;
+    }
+
+    #btn-salir-img{
+        visibility: hidden;
+    }
+
+    #btn-salir-texto{
+        visibility: hidden;
+    }
+
+    .main{
+        z-index: 1;
     }
 
     .generator{
-        width: 100%;
-        height: 70%;
+        width: 90%;
+        margin-top: 40px;
     }  
+
+    .boton-contorno{
+        width: 50%;
+    }
+   
+
+   
   
 }
 
