--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ nav{
 
 .generator{
     display: flex;
-    width: 40%;
+    width: 40vw;
     height: 65vh;
     flex-direction: column;
     justify-content: center;
@@ -139,7 +139,7 @@ nav{
 }
 
 p{
-    font-size: 30px;
+    font-size: 18px;
     font-weight: 800;
     color: black;
     width: 100%;
@@ -225,9 +225,11 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center; 
-    padding-top: 25px;
+    padding-top: 1.5625em;
     color: var(--colorTexto);
 }
+
+
 
 h3{
     margin-bottom: 8px;
@@ -471,7 +473,8 @@ input[type='checkbox']{
     }
 
     .generator{
-        width: 65%;
+        width: 50vw;
+        height: 60vh;
     }  
 }
 
@@ -501,7 +504,8 @@ input[type='checkbox']{
     }
 
     .generator{
-        width: 90%;
+        width: 60vw;
+        height: 50vh;
         margin-top: 40px;
     }  
 
