--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,6 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
-/*FUENTES PARA PANEL DE TEXTO*/
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Mukta:wght@200;300;400;500;600;700&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 .displayflex {
   display: flex;
@@ -112,8 +110,6 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding-left: 20px;
-    padding-right: 20px; */
 }
 
 .generator {
@@ -124,6 +120,7 @@ nav {
   justify-content: center;
   align-items: center;
   background-color: black;
+  position: relative;
 }
 
 .img-meme {
@@ -132,6 +129,14 @@ nav {
   background-color: black;
   background-size: cover;
   background-position: center;
+}
+
+.title-top{
+  top: 0;
+}
+
+.title-bottom{
+  bottom: 0;
 }
 
 p {
